# alternative-embedding-pooling

./: .gitignore  pyproject.toml
results/Qwen__Qwen3-Embedding-0.6B/744169034862c8eec56628663995004342e4e449/: ArguAna.json  model_meta.json
src/: benchmark_embedding_model.py  custom_poolers.py  mteb_utils.py
